# regex-pcre-gsub

./: .gitignore  LICENSE  gsub.cabal  gsub.hs  regex-pcre-gsub.cabal
src/Text/Regex/: Gsub.hs
src/Text/Regex/PCRE/: Gsub.hs
src/Text/Regex/PCRE/ByteString/: Gsub.hs
test/: TestSuite.hs
